[package]
name = "ch32v203"
version = "0.1.0"
edition = "2021"

[features]
ch32v203c6t6 = ["ch32-hal/ch32v203c6t6"]
ch32v203c8t6 = ["ch32-hal/ch32v203c8t6"]
ch32v203c8u6 = ["ch32-hal/ch32v203c8u6"]
ch32v203f6p6 = ["ch32-hal/ch32v203f6p6"]
ch32v203f8p6 = ["ch32-hal/ch32v203f8p6"]
ch32v203f8u6 = ["ch32-hal/ch32v203f8u6"]
ch32v203g6u6 = ["ch32-hal/ch32v203g6u6"]
ch32v203g8r6 = ["ch32-hal/ch32v203g8r6"]
ch32v203k6t6 = ["ch32-hal/ch32v203k6t6"]
ch32v203k8t6 = ["ch32-hal/ch32v203k8t6"]
ch32v203rbt6 = ["ch32-hal/ch32v203rbt6"]

default = ["ch32v203g6u6"]

[dependencies]
ch32-hal = { git = "https://github.com/ch32-rs/ch32-hal.git", rev = "ece4fcc086209506ae4f61772b448b7c9343e3a2", features = [
    "embassy",
    "time-driver-tim2",
    "rt",
    "memory-x",
] }
# Must use spin because of broken WFI + USB: https://github.com/ch32-rs/ch32-hal/pull/94#issuecomment-3194601636
embassy-executor = { version = "0.9.1", features = [
    "arch-spin",
    "executor-thread",
] }
embassy-usb = { version = "0.5", features = [
    "max-interface-count-6",
    "max-handler-count-6"
]}
embassy-time = { version = "0.5.0" }
embassy-futures = "0.1.2"

qingke-rt = "0.6.1"
qingke = "0.6.1"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
bitfield-struct = "0.12"
bytemuck = { version = "1.21", default-features = false}
static_cell = "2.1"
portable-atomic = {version = "1.3", features = ["unsafe-assume-single-core"]}

dap-rs = "0.2"
ob-dap = { path = "../ob-dap" }
rust-link-common = {path = "../common"}
