[package]
name = "ob-link-common"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = { version = "1.0.1", optional = true }
embassy-usb = "0.5"
embassy-futures = "0.1.2"
embedded-io-async = "0.6.1"
static_cell = "2.1"

embassy-stm32 = {version = "0.4", optional = true }

[features]
defmt = ["dep:defmt"]
stm32 = ["dep:embassy-stm32"]

default = []