[package]
name = "rp235x"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"

embassy-rp = { version = "0.10.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }

embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-usb = { version = "0.5", features = [
    "max-interface-count-5",
    "max-handler-count-5"
]}
embassy-time = { version = "0.5.0", features = ["defmt-timestamp-uptime"] }

embedded-hal = "1.0.0"
panic-halt = "1.0.0"
bitfield-struct = "0.12"
bytemuck = { version = "1.21", default-features = false}
static_cell = "2.1"
portable-atomic = "1.3"

dap-rs = "0.2"
ob-dap = { path = "../ob-dap" }
rust-link-common = {path = "../common", features = ["rp", "defmt"]}

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3           
overflow-checks = true

# cargo build/run --release
[profile.release]
strip = false     # symbols are not flashed to the microcontroller, so don't strip them.
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
