[package]
name = "stm32c071"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"

embassy-stm32 = {version = "0.5", features = [ "defmt", "time-driver-any", "stm32c071g8", "memory-x", "unstable-pac", "exti"]  }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-usb = { version = "0.5", features = [
    "max-interface-count-5",
    "max-handler-count-5"
]}
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

embedded-hal = "1.0.0"
panic-halt = "1.0.0"
bitfield-struct = "0.12"
bytemuck = { version = "1.21", default-features = false}
static_cell = "2.1"
portable-atomic = {version = "1.3", features = ["unsafe-assume-single-core"]}

dap-rs = {version = "0.2", features = ["defmt"]}
# dap-rs = { git = "https://github.com/bugadani/dap-rs", rev = "e9aa3c3", features = ["defmt"] }
# bitbang-dap = { git = "https://github.com/bugadani/bitbang-dap", rev = "138717a", features = ["defmt"] }
ob-dap = { path = "../ob-dap" }
rust-link-common = {path = "../common", features = ["stm32", "defmt"]}

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3           
overflow-checks = true

# cargo build/run --release
[profile.release]
strip = false     # symbols are not flashed to the microcontroller, so don't strip them.
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
